# mlflow-hp-analyzer

./: .gitignore  .mcp.json  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  plugin.json  pyproject.toml  requirements-dev.txt
.claude-plugin/: plugin.json
.github/workflows/: ci.yml
commands/: analyze-experiment.md  compare-runs.md  suggest-hps.md
mcp/mlflow-server/: __init__.py  requirements.txt  server.py
mcp/mlflow_server/: server.py
skills/hp-analysis/: SKILL.md
src/: __init__.py
src/mlflow_server/: server.py
tests/: __init__.py  conftest.py  test_server.py
